src/connectordb/plugins/webclient/static/css/connectordb.css
/* device icons */
.devicon {
    width: 4em;
    height: 4em;
}

abbr {
    border-bottom: 1px dashed gray;
}

/* Used for breadcrumbs */
.alert-gray {
    background-color: #F5F5F5;
    border-color: #DDDDDD;
    font-size: 1.1em;
}


.yes {
    display:block;
    width:1.5em;
    height:1.5em;
    background-image:url(/static/img/check.svg);
    background-size: 100% 100%;
    background-repeat: no-repeat;


}

.no {
    display:block;
    width:1.5em;
    height:1.5em;
    background-image:url(/static/img/x.svg);
    background-size: 100% 100%;
    background-repeat: no-repeat;
}


.super {
    display:block;
    width:1.5em;
    height:1.5em;
    background-image:url(/static/img/super.svg);
    background-size: 100% 100%;
    background-repeat: no-repeat;
}

.breadcrumb {
    display: inline;
    background-image: url("/static/img/right_arrow.svg");
    background-size: 2.2em;
    background-repeat: no-repeat;
    background-position: left top;
    padding-left: 2em;
    margin-left: 0em;
    margin-right: 0em;
    padding-right: 0em;
}

.headerimg {
    margin-right:.5em;
    height:1.5em;
}

.inlineimg {
    margin-right:.25em;
    height:1.25em;
}

/* Default size is a little small */
.panel-heading {
    font-size: 1.5em;
}

/* To combat container fluid on desktops where it gets insanely huge */
body {
    max-width:1170px;
  background-color: #eee;
  font-family:arial;

}

.panel {
  box-shadow: 0 1px 6px 0 rgba(0,0,0,.12),0 1px 6px 0 rgba(0,0,0,.12);

}

.panel-primary {
	border-width:0px;
}

/* To kill off the stupid roboto theme that makes forms invisible */

.form-control {
  border: 1px solid #d2d2d2;
  padding: 1em;
  background-color: white;
  background-image: none;
}

.form-control:focus{
background-image:none;

  padding: 1em;
  float: none;
  border: 1px solid #66afe9;

}

.form-group .form-control:focus, .form-group-default .form-control:focus {
background-image:none;

  padding: 1em;
  float: none;
  border: 1px solid #66afe9;

}


.navbar-inverse {
  background-color: #212a5e;
  border-color: #212a5e;
  color: white;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.navbar-brand {
  font-size: 1.2em;
  color: white;
  font-weight: bold;
}


.navbar-inverse .navbar-brand {
  color: white;
}

.navbar-inverse {
  color: white;
}


.navbar-inverse .navbar-nav > li > a {
  color: white;
}

.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
  background-color: #9C3FB5 !important;
  }


@media (max-width: 767px) {

    .navbar-inverse .navbar-nav .open .dropdown-menu {
      background-color: white;
    }

    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
      color: black;
    }

    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
      color: #ffffff;
      background-color: #3F51B5 !important;
    }
}

.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
  background-color: #3F51B5 !important;
}

